// Copyright 2015 The Cayley Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/cayleygraph/cayley/quad/pquads/quads.proto";
option (gogoproto.protosizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) =  true;

message LogDelta {
  uint64 ID = 1;
  pquads.Quad Quad = 2;
  int32 Action = 3;
  int64 Timestamp = 4;
}

message HistoryEntry {
  repeated uint64 History = 1;
}

message NodeData {
  string Name = 1;
  int64 Size = 2;
  pquads.Value value = 3;
}
